service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-fast
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: fast
  ports:
    - port: 8000
      targetPort: 8000
